--- a/index.html
+++ b/index.html
@@ -78,11 +78,6 @@
                   Apply Online
                 </button>
               </a>
-              <a href="award-verification.html" class="register">
-                <button type="button" class="btn pt-0 pb-0 register award-verification-btn">
-                  Award Verification
-                </button>
-              </a>
             </div>
           </div>
         </div>
@@ -102,7 +97,7 @@
           <div class="col-lg-9 position-static">
             <div class="nav-toggle d-md-none"></div>
             <nav class="nav-menus-wrapper">
-              <ul class="nav-menu">
+              <ul class="nav-menu offset-1">
                 <li>
                   <a class="active" href="index.html">Home</a>
                 </li>
@@ -129,11 +124,17 @@
                     <li></li>
                   </ul>
                 </li>
+
                 <li>
-                  <a href="blog.html">Blog</a>
-                </li>
-                <li>
-                  <a href="event.html">Events</a>
+                  <a href="#">Global Connect</a>
+                  <ul class="nav-dropdown nav-submenu">
+                    <li>
+                      <a href="blog.html">Blog</a>
+                    </li>
+                    <li><a href="event.html">Events</a></li>
+                    <li> <a href="gallery.html">Gallery</a></li>
+                    <li></li>
+                  </ul>
                 </li>
 
                 <li>
@@ -166,9 +167,6 @@
                       <a href="assets/pdf/LCM_Student_Application_Form.pdf">Student Application form</a>
                     </li>
                   </ul>
-                </li>
-                <li>
-                  <a href="gallery.html">Gallery</a>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -1436,7 +1434,7 @@
 
   <!--====== Blog Start ======-->
 
-  <section class="blog-area-2">
+  <!-- <section class="blog-area-2">
     <h4 class="trending-title">Trending blogs</h4>
     <div class="container">
       <div class="row">
@@ -1485,7 +1483,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!--====== Blog Ends ======-->
 
