--- a/index.html
+++ b/index.html
@@ -104,19 +104,15 @@
                 <li>
                   <a href="#">About Us</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li><a href="about-us.html">About Oxford</a></li>
                     <li><a href="why-lcm.html">Why Oxford</a></li>
-                    <li><a href="life-lcm">Life at Oxford</a></li>
+                    <li><a href="study-lcm">Study at Oxford</a></li>
                     <li><a href="our-team.html">Our Team</a></li>
                   </ul>
                 </li>
 
                 <li>
-                  <a href="#">Course</a>
+                  <a href="#">Admissions</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li>
-                      <a href="professional-training.html">Professional Training</a>
-                    </li>
                     <li><a href="diploma.html">Diploma</a></li>
                     <li><a href="undergraduate.html">Undergraduate</a></li>
                     <li><a href="postgraduate.html">Postgraduate</a></li>
@@ -126,48 +122,47 @@
                 </li>
 
                 <li>
-                  <a href="#">Global Connect</a>
+                  <a href="#">Academics</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li>
-                      <a href="blog.html">Blog</a>
-                    </li>
-                    <li><a href="event.html">Events</a></li>
-                    <li> <a href="gallery.html">Gallery</a></li>
-                    <li></li>
+                    <li><a href="--------.html">Online Applications</a></li>
+                    <li><a href="--------.html">Award of Degree</a></li>
+                    <li><a href="--------.html">Rules & Regulations</a></li>
+                    <li><a href="--------.html">Teaching & Evaluation</a></li>
+                    <li><a href="--------.html">Programmes Offered</a></li>
                   </ul>
                 </li>
 
                 <li>
-                  <a href="#">Download</a>
+                  <a href="#">Global Connect</a>
                   <ul class="nav-dropdown nav-submenu">
                     <li>
-                      <a href="assets/pdf/LCM%20Centre%20Application%20Form.pdf">Center Application Form</a>
+                      <a href="--------.html">Offered Programs</a>
+                      <ul class="nav-dropdown nav-submenu">
+                        <li><a href="diploma.html">Diploma</a></li>
+                        <li><a href="undergraduate.html">Undergraduate</a></li>
+                        <li><a href="postgraduate.html">Postgraduate</a></li>
+                        <li><a href="doctorate.html">Doctorate</a></li>
+                      </ul>
                     </li>
                     <li>
-                      <a href="assets/pdf/LCM%20Staff%20Application%20Form%20ORIGINAL%20new.pdf">Staff Application
-                        Form</a>
+                      <a href="--------.html">Eligibility</a>
+                      <ul class="nav-dropdown nav-submenu">
+                        <li><a href="--------.html">Admissions Procedure</a></li>
+                        <li><a href="--------.html">Procedure to Visa</a></li>
+                      </ul>
                     </li>
                     <li>
-                      <a href="assets/pdf/LCM%20Student%20Training%20Form%20new.pdf">Student Training Form</a>
+                      <a href="--------.html">Campus Life</a>
+                      <ul class="nav-dropdown nav-submenu">
+                        <li><a href="--------.html">Inside Campus</a></li>
+                        <li><a href="--------.html">Outside Campus</a></li>
+                        <li><a href="--------.html">Anti Ragging</a></li>
+                      </ul>
                     </li>
-                    <li>
-                      <a href="assets/images/LCM_Overseas_Student_Application_Form.doc">Overseas student application
-                        form</a>
-                    </li>
-                    <li>
-                      <a href="assets/pdf/Safeguarding%20LCM.pdf">SafeGuarding Oxford</a>
-                    </li>
-                    <li>
-                      <a href="assets/pdf/LCM%20Courses.pdf">Brouchuer</a>
-                    </li>
-                    <li>
-                      <a href="assets/pdf/FUNDING_APPLICATION_FORM_LCM.pdf">Funding Application Form</a>
-                    </li>
-                    <li>
-                      <a href="assets/pdf/LCM_Student_Application_Form.pdf">Student Application form</a>
-                    </li>
+                    <li><a href="--------.html">Internships</a></li>
                   </ul>
                 </li>
+
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -329,7 +324,7 @@
 
   <!-- about us end -->
 
-  <section class="campus-visit-area mb-5">
+  <!-- <section class="campus-visit-area mb-5">
     <div class="container">
       <div class="campus-visit-wrapper">
         <div class="campus-image-col">
@@ -376,7 +371,7 @@
         <a href="assets/images/Media%20workshop.pdf">Download</a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!--====== Top Courses Start ======-->
   <section class="blog-area-2">
