added quick links

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
   <section class="footer-area bg_cover" style="background-image: url(assets/images/counter-bg.jpg)">
     <div class="footer-widget">
       <div class="container">
+        <h4 class="quick-links-para-text">Quick Links</h4>
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <div class="footer-link mt-45">
