--- a/index.html
+++ b/index.html
@@ -210,6 +210,61 @@
 
   <!--====== Slider Ends ======-->
 
+  <section class="online-library-area">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-8">
+          <div class="section-title-2 text-center">
+            <h2 class="title">Accreditation & Partnership</h2>
+            <span class="line"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container" style="margin-top: 24px;">
+        <section class="customer-logos slider">
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(1).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(2).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(3).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(4).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(5).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(6).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(7).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(8).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(9).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(10).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(11).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(12).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(13).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(14).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(15).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(16).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(17).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(18).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(19).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(21).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(23).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(24).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(25).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(26).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(27).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(28).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(29).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(30).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(31).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(32).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(33).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(34).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(35).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(36).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(37).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(38).jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(39).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(40).png"></div>
+        </section>
+      </div>
+    </div>
+  </section>
+
   <!--====== Footer Start ======-->
 
   <section class="footer-area bg_cover" style="background-image: url(assets/images/counter-bg.jpg)">
