--- a/index.html
+++ b/index.html
@@ -270,24 +270,21 @@
   <section class="footer-area bg_cover" style="background-image: url(assets/images/counter-bg.jpg)">
     <div class="footer-widget">
       <div class="container">
-        <h4 class="quick-links-para-text">Quick Links</h4>
         <div class="row">
           <div class="col-md-3 col-sm-6">
+            <h4 class="quick-links-para-text">Quick Links</h4>
             <div class="footer-link mt-45">
-              <h4 class="footer-title">About Us</h4>
-              <p class="text-white" style="padding-top: 30px">
-                This is official website Oxford College
-              </p>
-              <br />
-              <a href="policies.html">
-                <h4 class="footer-title">Policies</h4>
-              </a><br />
-              <a href="brochures-leaflets.html">
-                <h4 class="footer-title mt-2">Brochures & Leaflets</h4>
-              </a>
+              <ul class="link-list">
+                <li><a href="">History Of The College</a> </li>
+                <li><a href="">Photo Galleries</a> </li>
+                <li><a href="">Our Policies</a> </li>
+                <li><a href="">Work For Us</a> </li>
+                <li><a href="">How To Find Us</a> </li>
+              </ul>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6">
+
+          <!-- <div class="col-md-3 col-sm-6">
             <div class="footer-link mt-45">
               <h4 class="footer-title">Our Course</h4>
               <ul class="link-list">
@@ -297,10 +294,11 @@
                 <li><a href="blog.html">Blog</a></li>
               </ul>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
+          </div> -->
+
+          <div class="col-md-6 col-sm-6">
+            <h4 class="quick-links-para-text">Download</h4>
             <div class="footer-link mt-45">
-              <h4 class="footer-title">Form Download</h4>
               <ul class="link-list">
                 <li><a href="assets/pdf/LCM%20Courses.pdf">Course</a></li>
                 <li>
@@ -323,10 +321,10 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6">
+          <div class="col-md-3 col-sm-12">
+            <h4 class="quick-links-para-text">Contact Us</h4>
             <div class="footer-link mt-45">
-              <h4 class="footer-title">Contact Us</h4>
-              <span style="padding-top: 30px">
+              <span>
                 <p class="text-white">Harben House</p>
                 <p class="text-white">Tickford Street</p>
                 <p class="text-white">Newport Pagnell</p>
@@ -389,7 +387,7 @@
       <div class="container">
         <div class="copyright text-center">
           <p>
-            Copyright 2020 &copy; &nbsp;<a href="#">Oxford College
+            Copyright 2022 &copy; &nbsp;<a href="#">Oxford College
             </a>
           </p>
         </div>
