history section begins

--- a/index.html
+++ b/index.html
@@ -208,7 +208,22 @@
     </div>
   </section>
 
+
   <!--====== Slider Ends ======-->
+
+  <!--====== History of Oxford ======-->
+  <section class="history-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-md-8">
+          <h2>History of Oxford</h2>
+        </div>
+      </div>
+      <div class="container" style="margin-top: 24px;">
+      </div>
+    </div>
+  </section>
+
 
   <section class="online-library-area">
     <div class="container">
