--- a/index.html
+++ b/index.html
@@ -212,20 +212,9 @@
   <!--====== Slider Ends ======-->
 
   <!--====== History of Oxford ======-->
-  <!-- <section class="history-area">
+  <section class="campus-visit-area">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-md-8">
-          <h2>History of Oxford</h2>
-        </div>
-      </div>
-      <div class="container" style="margin-top: 24px;">
-      </div>
-    </div>
-  </section> -->
 
-  <section class="online-library-area mb-5">
-    <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-8">
           <div class="section-title-2 text-center">
@@ -234,25 +223,23 @@
           </div>
         </div>
       </div>
-      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis cupiditate impedit molestias
-        nihil iste, veritatis quod error voluptas necessitatibus aut repellat ducimus voluptatibus delectus deserunt sit
-        commodi? Deleniti eveniet consequatur necessitatibus harum ut qui impedit corporis rem temporibus,
-        reprehenderit, aspernatur sunt, aliquid officiis distinctio. Placeat vel suscipit porro fuga minima! Enim
-        repellat corrupti, ipsam inventore recusandae nemo reiciendis odio eum. Et vel ipsam suscipit delectus quo ea.
-        Beatae culpa molestiae, qui nihil pariatur asperiores harum. Repellendus, adipisci ipsum suscipit rerum quaerat
-        tenetur molestias dignissimos quod amet alias quia quasi provident dolore natus nostrum beatae accusamus fugit
-        eaque veniam. Cumque optio quidem maxime est. Voluptas veniam placeat repellendus omnis iure asperiores
-        laudantium unde necessitatibus dignissimos accusamus, optio possimus rem porro temporibus perferendis laborum
-        autem et molestiae. Ipsa optio eum reprehenderit corporis voluptate dolor vel magni quas, iste error. Repellat
-        reprehenderit deleniti cumque veritatis iusto maiores sunt eligendi magnam fugiat culpa sit quo ducimus ad, illo
-        error, laboriosam quis dolor dolorem neque quibusdam nam porro eveniet nihil. Ipsam magni excepturi enim
-        quisquam iste ex molestias mollitia odio, architecto cum iure ipsa debitis quis, dolore temporibus alias quo
-        quidem. Non assumenda quod recusandae ex vero. Unde enim voluptatem ab quibusdam illo, facilis adipisci.</p>
+
+      <div class="campus-content-col">
+        <div class="campus-content">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, provident delectus? Aliquam ipsam animi,
+            atque molestiae alias voluptas corrupti? Veniam atque corporis vitae beatae animi eaque soluta quos
+            perferendis provident sint at suscipit officia quibusdam, iure magnam doloremque dolorum? Tenetur maiores
+            facilis tempora exercitationem iusto omnis numquam hic, perferendis doloribus totam eaque libero beatae
+            incidunt ad ex enim non nobis. Molestiae aspernatur, laboriosam odio provident consequatur, suscipit
+            architecto voluptatem, itaque explicabo expedita eos tempore voluptates perferendis aliquam. Repellat
+            explicabo omnis eum optio doloremque. Vel eveniet ipsa, consequatur facilis quisquam voluptatibus
+            similique perspiciatis at natus deleniti quos minima cum iure sint?
+          </p>
+        </div>
+      </div>
     </div>
   </section>
-
-
-
 
   <section class="online-library-area">
     <div class="container">
