--- a/index.html
+++ b/index.html
@@ -210,32 +210,33 @@
 
 
   <!--====== Slider Ends ======-->
-
   <!--====== History of Oxford ======-->
   <section class="campus-visit-area">
-    <div class="container">
-
-      <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-8">
-          <div class="section-title-2 text-center">
-            <h2 class="title">History of Oxford</h2>
-            <span class="line"></span>
-          </div>
-        </div>
+    <div class="col-12">
+      <div class="section-title-2 text-center">
+        <h2 class="title text-center">History of Oxford</h2>
+        <span class="line"></span>
       </div>
-
-      <div class="campus-content-col">
-        <div class="campus-content">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, provident delectus? Aliquam ipsam animi,
-            atque molestiae alias voluptas corrupti? Veniam atque corporis vitae beatae animi eaque soluta quos
-            perferendis provident sint at suscipit officia quibusdam, iure magnam doloremque dolorum? Tenetur maiores
-            facilis tempora exercitationem iusto omnis numquam hic, perferendis doloribus totam eaque libero beatae
-            incidunt ad ex enim non nobis. Molestiae aspernatur, laboriosam odio provident consequatur, suscipit
-            architecto voluptatem, itaque explicabo expedita eos tempore voluptates perferendis aliquam. Repellat
-            explicabo omnis eum optio doloremque. Vel eveniet ipsa, consequatur facilis quisquam voluptatibus
-            similique perspiciatis at natus deleniti quos minima cum iure sint?
-          </p>
+    </div>
+    <div class="container bg-overlay">
+      <div class="row justify-content-center">
+        <div class="campus-content-col">
+          <div class="campus-content">
+            <p style="color: rgb(115 132 158);">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae consequatur minima perspiciatis
+              veritatis non totam sint. Maxime accusantium enim voluptate quibusdam doloremque et quas architecto nulla
+              odit
+              necessitatibus cum vel ad dolor distinctio nesciunt, cumque non dolorem nisi blanditiis molestiae. Veniam,
+              nihil. Laborum quod earum facilis inventore delectus pariatur enim culpa cumque magnam dignissimos, velit
+              distinctio. Laboriosam explicabo minus illo ea, dicta ex ut cumque labore deleniti nesciunt repellendus
+              sequi
+              quod reiciendis minima nulla, cupiditate aliquam soluta magnam dignissimos consequuntur quisquam
+              temporibus
+              vitae asperiores quasi! Asperiores praesentium porro molestiae aperiam quos. Voluptatum, fuga blanditiis!
+              Quis
+              nostrum distinctio laboriosam nulla molestias.
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -253,44 +254,24 @@
       </div>
       <div class="container" style="margin-top: 24px;">
         <section class="customer-logos slider">
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(1).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(2).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(3).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(4).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(5).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(6).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(7).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(8).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(9).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(10).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(11).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(12).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(13).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(14).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(15).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(16).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(17).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(18).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(19).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(21).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(23).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(24).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(25).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(26).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(27).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(28).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(29).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(30).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(31).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(32).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(33).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(34).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(35).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(36).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(37).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(38).jpg"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(39).png"></div>
-          <div class="slide"><img class="logo-size" src="assets/images/accreditation/partners%20(40).png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/1.jpeg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/2.JPG"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/3.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/4.jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/5.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/6.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/7.jpeg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/8.jpeg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/9.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/10.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/11.jpg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/12.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/13.jpeg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/14.JPG"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/15.jpeg"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/16.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/17.png"></div>
+          <div class="slide"><img class="logo-size" src="assets/images/accreditation/18.jpeg"></div>
         </section>
       </div>
     </div>
@@ -302,7 +283,7 @@
     <div class="footer-widget">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 col-sm-6">
+          <div class="col-md-4 col-sm-6">
             <h4 class="quick-links-para-text">Quick Links</h4>
             <div class="footer-link mt-45">
               <ul class="link-list">
@@ -315,19 +296,7 @@
             </div>
           </div>
 
-          <!-- <div class="col-md-3 col-sm-6">
-            <div class="footer-link mt-45">
-              <h4 class="footer-title">Our Course</h4>
-              <ul class="link-list">
-                <li><a href="about-us.html">About Us</a></li>
-
-                <li><a href="doctorate.html">Doctorate</a></li>
-                <li><a href="blog.html">Blog</a></li>
-              </ul>
-            </div>
-          </div> -->
-
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-4 col-sm-6">
             <h4 class="quick-links-para-text">Download</h4>
             <div class="footer-link mt-45">
               <ul class="link-list">
@@ -336,7 +305,8 @@
                   <a href="assets/pdf/LCM%20Centre%20Application%20Form.pdf">Center Application Form</a>
                 </li>
                 <li>
-                  <a href="assets/pdf/LCM%20Staff%20Application%20Form%20ORIGINAL%20new.pdf">Staff Application Form</a>
+                  <a href="assets/pdf/LCM%20Staff%20Application%20Form%20ORIGINAL%20new.pdf">Staff Application
+                    Form</a>
                 </li>
                 <li>
                   <a href="assets/pdf/LCM%20Student%20Training%20Form%20new.pdf%20form%20new.html">Student Training
@@ -352,7 +322,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-3 col-sm-12">
+          <div class="col-md-4 col-sm-12">
             <h4 class="quick-links-para-text">Contact Us</h4>
             <div class="footer-link mt-45">
               <span>
@@ -372,8 +342,6 @@
                     <a href="https://wa.me/447944619978">
                       +44(0)7944619978</a>
                     <br />
-                    Mobile:
-                    <a href="tel:+44(0)7944619978"> +44(0)7944619978</a>
                   </p>
                 </li>
                 <li>
