added award of degree

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <a href="#">Academics</a>
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="--------.html">Online Applications</a></li>
-                    <li><a href="--------.html">Award of Degree</a></li>
+                    <li><a href="./assets/pdf/Award Of Degree.pdf" target="_blank">Award of Degree</a></li>
                     <li><a href="--------.html">Rules & Regulations</a></li>
                     <li><a href="--------.html">Teaching & Evaluation</a></li>
                     <li><a href="--------.html">Programmes Offered</a></li>
