added three more pages

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <li><a href="--------.html">Online Applications</a></li>
                     <li><a href="./assets/pdf/Award Of Degree.pdf" target="_blank">Award of Degree</a></li>
                     <li><a href="--------.html">Rules & Regulations</a></li>
-                    <li><a href="--------.html">Teaching & Evaluation</a></li>
+                    <li><a href="teaching-regulation.html">Teaching & Evaluation</a></li>
                     <li><a href="--------.html">Programmes Offered</a></li>
                   </ul>
                 </li>
